style: finalize layout ratio at 75:25, implement dynamic logical height, and fix box-sizing overflow

--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 canvas {
     image-rendering: -moz-crisp-edges;
     image-rendering: -webkit-crisp-edges;
